<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.gregniederschulte.androidcamera.MainActivity">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="368dp"
            android:layout_height="495dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:orientation="vertical"
            android:background="@drawable/mario_background"
            tools:layout_editor_absoluteY="8dp"
            tools:layout_editor_absoluteX="8dp">
            <SeekBar
                android:id="@+id/seek1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:progress="20"
                android:secondaryProgress="20"
                android:paddingTop="2dp"
                android:paddingBottom="2dp" />
            <TextView
                android:id="@+id/redTextView"
                android:text="@string/redSlider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <SeekBar
                android:id="@+id/seek2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:progress="20"
                android:secondaryProgress="20"
                android:paddingTop="2dp"
                android:paddingBottom="2dp" />
            <TextView
                android:id="@+id/greenTextView"
                android:text="@string/greenSlider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <SeekBar
                android:id="@+id/seek3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:progress="20"
                android:secondaryProgress="20"
                android:paddingTop="2dp"
                android:paddingBottom="2dp" />
            <TextView
                android:id="@+id/blueTextView"
                android:text="@string/blueSlider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <SeekBar
                android:id="@+id/seek4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:progress="20"
                android:secondaryProgress="20"
                android:paddingTop="2dp"
                android:paddingBottom="2dp" />
            <TextView
                android:id="@+id/rowGapTextView"
                android:text="@string/rowGapSlider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <SeekBar
                android:id="@+id/seek5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:progress="20"
                android:secondaryProgress="20"
                android:paddingTop="2dp"
                android:paddingBottom="2dp" />
            <TextView
                android:id="@+id/colGapTextView"
                android:text="@string/colGapSlider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/cameraStatus"
                android:text="@string/framesPerSecond"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <SurfaceView
                android:id="@+id/surfaceview"
                android:layout_width="640px"
                android:layout_height="480px" />
            <TextureView
                android:id="@+id/textureview"
                android:layout_width="120dp"
                android:layout_height="85dp" />
            <ScrollView
                android:id="@+id/ScrollView01"
                android:layout_width="wrap_content"
                android:layout_height="56dp">
                <TextView
                    android:id="@+id/textView03"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/holo_green_light"
                    android:text="nothing from usb yet" />
            </ScrollView>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
